# text-game-engine

./: .gitignore  MIGRATION_CHECKLIST.md  README.md  SCHEMA.md  pyproject.toml
docs/: examples.md  notes.md  persistence.md  sdk.md
examples/: README.md  attachment_processing.py  minimal_engine_turn.py  zork_emulator_session.py
migrations/: 0001_initial.sql
src/text_game_engine/: __init__.py  zork_emulator.py
src/text_game_engine/core/: __init__.py  attachments.py  emulator_ports.py  engine.py  errors.py  normalize.py  ports.py  tokens.py  types.py
src/text_game_engine/persistence/: __init__.py  interfaces.py
src/text_game_engine/persistence/sqlalchemy/: __init__.py  base.py  db.py  models.py  repos.py  uow.py
tests/: conftest.py  test_attachment_processing.py  test_engine_flow.py  test_zork_emulator_compat.py  test_zork_emulator_parity_core.py
