[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-game-engine"
version = "0.1.0"
description = "Host-agnostic text game engine with pluggable persistence and adapters"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "text-game-engine contributors"}]
dependencies = [
  "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
